--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-keyboard-shortcut": "^1.1.6"
   }
 }
